@@ -5,12 +5,15 @@
 //
 // $Id$
 //
+#include "../host-host-seqc/load.c"
+
 extern void lib_main(void);
 
 // configuration tag for sgr
 const char *__tag__ = "sgr_runner:host:";
 
-int main(void) {
+int main(int argc, const char **argv) {
+  load(argv[0], argv[1]);
   lib_main();
   return 0;
 }
